@@ -14,6 +14,8 @@ RELEASE 0.97 - XXX
 
   - Fix inconsistent handling of Action strfunction arguments.
 
+  - Preserve white space in display ACtion strfunction strings.
+
   From Steven Knight:
 
   - Have the Taskmaster track the currently-executed top-level target
